--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1> Hola curso Git</h1>
 
-<p>Esto es un parrafo de ejemplo"</p>
+<p>Esto es un p&Aacute;arrafo de ejemplo"</p>
 
 </body>
 </html>
