--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Documento sin título</title>
+<link href="CCS/estilos.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
+<h1>Proyecto empresariables</h1>
 
 <h1> Hola curso Git</h1>
 
