--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1> Hola curso Git</h1>
 
 <p>Esto es un p&Aacute;arrafo de ejemplo"</p>
-<p>Párrafo agregado</p>
+<p>Párrafo Agregado</p>
 
 </body>
 </html>
